Finished backend for Registration Page
EZPZ

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>CovidWebsite</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CovidWebsite</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Term project for Spring Boot</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
