--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,11 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 
-
+#----- Spring Mail -----
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dawgsvscovid
+spring.mail.password=Donovan12345
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
