--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 #----- Spring H2-Console -----
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.h2.console.path=/h2
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 #spring.datasource.url=jdbc:h2:file:/data/account
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:h2:file:./src/main/resources/data/spring-boot-h2-db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 #----- JSP -----
 spring.mvc.view.prefix=/WEB-INF/jsp/
