--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ build/
 .vscode/
 *.db
 src/main/resources/data/spring-boot-h2-db.mv.db
+src/main/resources/data/spring-boot-h2-db.mv.db
+*.db
+src/main/resources/data/spring-boot-h2-db.mv.db
+*.db
