Worked on request page

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ src/main/resources/data/spring-boot-h2-db.mv.db
 *.db
 src/main/resources/data/spring-boot-h2-db.mv.db
 *.db
+src/main/resources/data/spring-boot-h2-db.mv.db
+*.db
+src/main/resources/data/spring-boot-h2-db.mv.db
+*.db
