--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ src/main/resources/data/spring-boot-h2-db.mv.db
 src/main/resources/data/spring-boot-h2-db.mv.db
 *.db
 src/main/resources/data/spring-boot-h2-db.mv.db
+src/main/resources/data/spring-boot-h2-db.mv.db
