--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ src/main/resources/data/spring-boot-h2-db.mv.db
 *.db
 src/main/resources/data/spring-boot-h2-db.mv.db
 src/main/resources/data/spring-boot-h2-db.mv.db
+*.db
+src/main/resources/data/spring-boot-h2-db.mv.db
